// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should reset the IAC value to none 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the IAC value to allowed 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "allowed",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the IAC value to required 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "required",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the created flag 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": true,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the going count 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 10,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has attendee info fields 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": true,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has changes 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": true,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has duration error 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "hasDurationError": true,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the id 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 42,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is loading 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": true,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is modal open 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": true,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is settings loading 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": true,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the not going count 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 10,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
{
  "attendeeInfoFieldNames": [],
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "inventory": null,
  "isAddEditOpen": false,
  "isInitializing": true,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": true,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "2019-07-19",
    "endDateInput": "2019-07-19",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "21:30:00",
    "endTimeInput": "9:30 pm",
    "notGoingResponses": false,
    "startDate": "2018-07-19",
    "startDateInput": "2018-07-19",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "19:30:00",
    "startTimeInput": "7:30 pm",
    "title": "",
  },
}
`;
